@@ -9,8 +9,8 @@
 	<oaf_attribute name="description" type="string" value="Factory for gnome theme preview controls"/>
 </oaf_server>
 
-<oaf_server iid="OAFIID:Bonobo_Sample_Entry" type="factory"
-	location="OAFIID:Bonobo_Sample_ControlFactory">
+<oaf_server iid="OAFIID:GNOME_Theme_Preview" type="factory"
+	location="OAFIID:GNOME_Theme_PreviewFactory">
 	<oaf_attribute name="repo_ids" type="stringv">
 		<item value="IDL:Bonobo/Unknown:1.0"/>
 		<item value="IDL:Bonobo/Control:1.0"/>
