@@ -1,4 +1,8 @@
 2001-12-08  Richard Hestilow  <hestilow@ximian.com>
+	
+	* Port to GConf.
+
+2001-12-08  Richard Hestilow  <hestilow@ximian.com>
 
 	* Partial revamp to use bonobo control instead of bug-prone
 	custom socket; also port away from libcapplet.
